--- a/in.html
+++ b/in.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>JP Dynamic Chatbot</title>
-  <link rel="stylesheet" href="static/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Header -->
@@ -21,6 +21,7 @@
   </div>
 
   <!-- Scripts -->
-  <script src="static/scripts.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
+
